# basic-setting-ros

./: README.md  run.sh
package_name/: CMakeLists.txt  package.xml
package_name/include/: change.hpp
package_name/launch/: package.launch
package_name/src/: change.cpp  main.cpp
scripts/: install_ros_melodic.sh
src/project_name/: CMakeLists.txt  package.xml
src/project_name/launch/: a.launch
src/project_name/src/: main.cpp
